bugfixes and floor truncate

--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ p {
 }
 
 .progress-container-block {
-    flex-grow: 1;
+    flex: 1 1 0;
     min-width: 200px;
     display: flex;
     flex-direction: column;
